--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-communication-app",
+  "name": "virgoprincess.github.io",
   "version": "0.1.1",
   "private": true,
   "scripts": {
