--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-google-oauth2": "^1.5.8",
     "vue-router": "^3.5.3",
-    "vuex": "^4.0.2"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -45,7 +46,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
