--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-communication-app",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -18,6 +18,7 @@
     "vue": "^2.6.14",
     "vue-google-oauth2": "^1.5.8",
     "vue-router": "^3.5.3",
+    "vuetify": "^2.6.4",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
