--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-communication-app",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
@@ -18,6 +18,7 @@
     "vue": "^2.6.14",
     "vue-google-oauth2": "^1.5.8",
     "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.4",
     "vuex": "^3.6.2"
   },
