--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-communication-app",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,10 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-google-oauth2": "^1.5.8",
     "vue-router": "^3.5.3",
     "vuelidate": "^0.7.7",
