--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-communication-app",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "urlsafe-base64": "^1.0.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-google-oauth2": "^1.5.8",
