--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-communication-app",
-  "version": "0.1.35",
+  "version": "0.1.36",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "urlsafe-base64": "^1.0.0",
     "vue": "^2.6.14",
