--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "online-communication-app",
-  "version": "0.1.41",
+  "version": "0.1.42",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --https true",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy": "sh deploy.sh"
